# cpp_cmake_template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/workflows/: CD.yml  cmaketest.yml
include/: main.h
src/: main.cpp
test/: main_test.cpp
